chandeliers-lus/tests/compile_fail/ui/causality/undef.stderr
error: No definition provided for Variable `i` which is required
 --> tests/compile_fail/ui/causality/undef.rs:2:25
  |
2 |     node foo() returns (i : int);
  |                         ^
